// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > should render 1`] = `
<rk-switch
  aria-disabled="false"
  aria-label="Toggle Switch"
  aria-orientation="horizontal"
  role="listbox"
  tabindex="0"
>
  <rk-item
    aria-selected="false"
    class="relative"
    data-path="0"
    role="option"
  >
    <!---->
     
    <!---->
  </rk-item>
  <rk-item
    aria-selected="false"
    class="relative"
    data-path="1"
    role="option"
  >
    <!---->
     
    <!---->
  </rk-item>
  
</rk-switch>
`;

exports[`Switch > should render with error for invalid options 1`] = `null`;

exports[`Switch > should render with object options 1`] = `
<rk-switch
  aria-disabled="false"
  aria-label="Toggle Switch"
  aria-orientation="horizontal"
  class="is-off"
  role="listbox"
  tabindex="0"
>
  <rk-item
    aria-selected="true"
    class="relative"
    data-path="0"
    role="option"
  >
    <rk-indicator
      class="absolute bottom-0 left-0 right-0 top-0"
    />
    <!---->
     
    <!---->
  </rk-item>
  <rk-item
    aria-selected="false"
    class="relative"
    data-path="1"
    role="option"
  >
    <!---->
     
    <!---->
  </rk-item>
  
</rk-switch>
`;

exports[`Switch > should render with options 1`] = `
<rk-switch
  aria-disabled="false"
  aria-label="Toggle Switch"
  aria-orientation="horizontal"
  role="listbox"
  tabindex="0"
>
  <rk-item
    aria-selected="false"
    class="relative"
    data-path="0"
    role="option"
  >
    <!---->
     
    <!---->
  </rk-item>
  <rk-item
    aria-selected="false"
    class="relative"
    data-path="1"
    role="option"
  >
    <!---->
     
    <!---->
  </rk-item>
  
</rk-switch>
`;

exports[`Switch > should switch options on click 1`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-off"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on click 2`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-on"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="1"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown   1`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-off"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown   2`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-on"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="1"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown   3`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-off"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowDown 1`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-off"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowDown 2`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-on"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="1"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowDown 3`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-off"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowLeft 1`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="2"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowLeft 2`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="1"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="2"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowLeft 3`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="2"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowRight 1`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-off"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowRight 2`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-on"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="1"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowRight 3`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-off"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowUp 1`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="2"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowUp 2`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="1"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="2"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown ArrowUp 3`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="2"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown Enter 1`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-off"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown Enter 2`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-on"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="0"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="1"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;

exports[`Switch > should switch options on keydown Enter 3`] = `
<div>
  <!---->
  <rk-switch
    aria-disabled="false"
    aria-label="Toggle Switch"
    aria-orientation="horizontal"
    class="is-off"
    role="listbox"
    tabindex="0"
  >
    <rk-item
      aria-selected="true"
      class="relative"
      data-path="0"
      role="option"
    >
      <rk-indicator
        class="absolute bottom-0 left-0 right-0 top-0"
      />
      <!---->
       
      <!---->
    </rk-item>
    <rk-item
      aria-selected="false"
      class="relative"
      data-path="1"
      role="option"
    >
      <!---->
       
      <!---->
    </rk-item>
    
  </rk-switch>
  
  
</div>
`;
